# cangine

./: .gitignore  CMakeLists.txt  CMakeLists.txt.example  Doxyfile  LICENSE.txt  Makefile  README.md
cangine/: CMakeLists.txt
cangine/cmake/: cangineConfig.cmake.in
cangine/shaders/: default.frag  default.vert
cangine/src/cangine/: cangine.cpp  cangine.hpp
cangine/src/cangine/audio/: audiomanager.cpp  audiomanager.hpp  sound.cpp  sound.hpp
cangine/src/cangine/engine/: exception.hpp  object_manager.cpp  object_manager.hpp
cangine/src/cangine/engine/components/: camera_component.cpp  camera_component.hpp  component.cpp  component.hpp  quadrenderer_component.cpp  quadrenderer_component.hpp  textrenderer_component.cpp  textrenderer_component.hpp  transform_component.cpp  transform_component.hpp
cangine/src/cangine/engine/components/ui/: button_component.cpp  button_component.hpp  inputfield_component.cpp  inputfield_component.hpp  panel_component.cpp  panel_component.hpp
cangine/src/cangine/engine/gameobjects/: camera_object.cpp  camera_object.hpp  game_object.cpp  game_object.hpp
cangine/src/cangine/engine/gameobjects/ui/: button_object.cpp  button_object.hpp  inputfield_object.cpp  inputfield_object.hpp  label_object.cpp  label_object.hpp  panel_object.cpp  panel_object.hpp
cangine/src/cangine/platform/: input.cpp  input.hpp  key.cpp  key.hpp  mouse.cpp  mouse.hpp  window.cpp  window.hpp
cangine/src/cangine/render/: ebo.cpp  ebo.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vao.cpp  vao.hpp  vbo.cpp  vbo.hpp
cangine/src/cangine/render/renderer/: primitive_renderer.cpp  primitive_renderer.hpp  quad_renderer.cpp  quad_renderer.hpp  render_system.cpp  render_system.hpp  text_renderer.cpp  text_renderer.hpp
cangine/src/cangine/shapes/: rectangle.hpp  shapes.hpp  triangle.hpp  vertex.hpp
cangine/src/cangine/types/: dimensions.hpp  types.hpp  vector2.hpp  vector3.hpp
cangine/src/cangine/util/: color.hpp  position.cpp  position.hpp
debian/: changelog  control  copyright  libcangine-dev.install  libcangine1.install  rules  watch
debian/source/: options
debian/upstream/: metadata
examples/aimtrainer/: CMakeLists.txt
examples/aimtrainer/src/: aimtrainer.cpp  aimtrainer.hpp
examples/audio/: CMakeLists.txt
examples/audio/src/: audio.cpp  audio.hpp
examples/camera/: CMakeLists.txt
examples/camera/src/: camera.cpp  camera.hpp
examples/helloworld/: CMakeLists.txt
examples/helloworld/src/: helloworld.cpp  helloworld.hpp
examples/inputfield/: CMakeLists.txt
examples/inputfield/src/: inputfield.cpp  inputfield.hpp
examples/panel/: CMakeLists.txt
examples/panel/src/: panel.cpp  panel.hpp
examples/sandbox/: CMakeLists.txt  README.md
examples/sandbox/src/: sandbox.cpp  sandbox.hpp
examples/simplehelloworld/: CMakeLists.txt
examples/simplehelloworld/src/: simplehelloworld.cpp  simplehelloworld.hpp
examples/survival/: CMakeLists.txt
examples/survival/src/: survival.cpp  survival.hpp
examples/ui/: CMakeLists.txt
examples/ui/src/: ui.cpp  ui.hpp
